--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "@reduxjs/toolkit": "^2.8.2",
     "js-cookie": "^3.0.5",
     "next": "^15.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-pdf": "^10.2.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
